# fastapi-bnipi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  main.py
tests/: test_app.py
